Thu Mar 05 10:43:36 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: More updates to base revisions.

Thu Mar 05 10:26:02 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Fix base revision for postingsources.

Thu Mar 05 08:29:02 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Add postingsources branch.

Wed Mar 04 16:35:16 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/imgseek.py: Add buckets parameter, and some
	  useful commented out debug prints.

Wed Mar 04 16:34:22 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/fieldactions.py: add "buckets" parameter to IMGSEEK action,
	  to allow the number of buckets to be controlled.

Wed Mar 04 14:59:16 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/imgseek.py: Add (commented out) debugging prints.

Tue Mar 03 17:10:16 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/fieldactions.py,
	  xappy/indexerconnection.py,xappy/searchconnection.py,
	  xappy/unittests/imgseek.py: Add an alternate, approximate but
	  much faster, method of doing the image similarity searches.
	* perftest/imgidx.py,perftest/imgsearch.py: Add some simple
	  performance tests for image searches.

Tue Mar 03 15:48:30 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/image.rst: Documentation for the imgseek feature.

Mon Mar 02 13:48:01 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update branchpoints, and remove
	  valuemapsource branch which has been merged to trunk.

Fri Feb 27 14:23:26 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/_checkxapian.py,xappy/fieldactions.py,
	  xappy/searchconnection.py,xappy/unittests/imgseek.py: Add new
	  IMGSEEK field action, and corresponding query_image_similarity()
	  method.  Also add test case.  All requires a new set of xapian